--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>🏫 Escola Monte do Saber</h1>
+        <h1>🏫 Colégio Estadual Presidente Vargas</h1>
         <p>"Educando para um futuro melhor"</p>
     </header>
 
@@ -16,20 +16,20 @@
         <section id="info">
             <h2>📍 Informações da Escola</h2>
             <div class="card">
-                <p><strong>Localização:</strong> Rua das Flores, 123 - Cidade Exemplo</p>
-                <p><strong>Salas de Aula:</strong> <span id="salas">12</span></p>
-                <p><strong>Banheiros:</strong> <span id="banheiros">6</span></p>
-                <p><strong>Professores:</strong> <span id="professores">18</span></p>
-                <p><strong>Alunos:</strong> <span id="alunos">320</span></p>
+                <p><strong>Localização:</strong> Av. São Roque, 235, Pinhal de São Bento - PR </p>
+                <p><strong>Salas de Aula:</strong> <span id="salas">14</span></p>
+                <p><strong>Banheiros:</strong> <span id="banheiros">7</span></p>
+                <p><strong>Professores:</strong> <span id="professores">33</span></p>
+                <p><strong>Alunos:</strong> <span id="alunos">224</span></p>
             </div>
         </section>
 
         <section id="detalhes">
             <h2>📚 Sobre a Escola</h2>
             <p>
-                A <strong>Escola Monte do Saber</strong> é uma instituição de ensino comprometida com a
+                A <strong>Colégio Estadual Presidente Vargas</strong> é uma instituição de ensino comprometida com a
                 formação integral dos alunos. Nossa missão é promover educação de qualidade, estimulando
-                o desenvolvimento intelectual, emocional e social de cada estudante.
+                o desenvolvimento intelectual, emocional e social de cada estudante. Contendo estudos integral para o ensino fundamental.
             </p>
             <ul>
                 <li>🏠 <strong>Fundada:</strong> 2002</li>
@@ -61,7 +61,7 @@
     </main>
 
     <footer>
-        <p>© 2025 Escola Monte do Saber | Desenvolvido com ❤️ por alunos do 9º Ano</p>
+        <p>© 2025 Colégio Estadual Presidente Vargas | Desenvolvido com ❤️ por alunos do 9º Ano</p>
     </footer>
 
     <script src="script.js"></script>
