--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>🏫 Colégio Estadual Presidente Vargas </h1>
+    <h1>🏫 Escola Horizonte do Saber</h1>
     <p>“Educação é a base de um futuro melhor.”</p>
   </header>
 
@@ -17,7 +17,7 @@
     <section id="sobre">
       <h2>📘 Sobre a Escola</h2>
       <p>
-        A <strong>Colégio Estadual Presidente Vargas</strong> é uma instituição dedicada à formação de cidadãos éticos, criativos e preparados
+        A <strong>Escola Horizonte do Saber</strong> é uma instituição dedicada à formação de cidadãos éticos, criativos e preparados
         para os desafios do mundo moderno. Com ensino de qualidade e estrutura acolhedora, buscamos o desenvolvimento integral de nossos alunos.
       </p>
     </section>
@@ -26,11 +26,11 @@
     <section id="informacoes">
       <h2>🏫 Informações Gerais</h2>
       <div class="info-box">
-        <p><strong>Diretora:</strong> <span id="diretora">Daiane Aparecida Savoldi</span></p>
-        <p><strong>Localização:</strong> RUA PRES VARGAS, 235 CENTRO. 85727-000 Pinhal de São Bento - PR</p>
-        <p><strong>Cor da Escola:</strong> Cinza e Branco</p>
-        <p><strong>Alunos:</strong> <span id="alunos">224</span></p>
-        <p><strong>Professores:</strong> <span id="professores">33</span></p>
+        <p><strong>Diretora:</strong> <span id="diretora">Maria das Graças Silva</span></p>
+        <p><strong>Localização:</strong> Rua da Educação, 145 – Centro, Cidade Exemplo</p>
+        <p><strong>Cor da Escola:</strong> Azul e Branco</p>
+        <p><strong>Alunos:</strong> <span id="alunos">450</span></p>
+        <p><strong>Professores:</strong> <span id="professores">25</span></p>
         <p><strong>Salas:</strong> <span id="salas">15</span></p>
         <p><strong>Banheiros:</strong> <span id="banheiros">8</span></p>
       </div>
@@ -47,6 +47,16 @@
         <li>🍴 Refeitório com alimentação balanceada</li>
         <li>🌳 Pátio arborizado e seguro</li>
       </ul>
+    </section>
+
+    <!-- 🖼️ SEÇÃO DE GALERIA -->
+    <section id="galeria">
+      <h2>🖼️ Galeria de Imagens</h2>
+      <p>Confira algumas fotos da nossa escola:</p>
+      <div class="galeria-container">
+        <img src="image.png" alt="Visão completa">
+        <img src="image copy.png" alt="Pátio escolar">
+      </div>
     </section>
 
     <!-- SEÇÃO INTERATIVA -->
@@ -66,7 +76,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Colégio Estadual Presidente Vargas | Desenvolvido com 💙 por alunos da escola</p>
+    <p>© 2025 Escola Horizonte do Saber | Desenvolvido com 💙 por alunos da escola</p>
   </footer>
 
   <script src="script.js"></script>
